# rust-microsql

./: .gitignore  README.md
crates/sqlmicro-execution/: Cargo.toml
crates/sqlmicro-execution/src/: error.rs  executor.rs  lib.rs  row.rs  table.rs
crates/sqlmicro-parser/: Cargo.toml
crates/sqlmicro-parser/src/: error.rs  lib.rs  parse.rs  query.rs  value.rs
crates/sqlmicro-parser/src/commands/: create.rs  insert.rs  mod.rs  select.rs
crates/sqlmicro-repl/: Cargo.toml
crates/sqlmicro-repl/src/: error.rs  main.rs  response.rs
