[package]
name = "sqlmicro-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "11.0.0", features = ["derive"] }
sqlmicro-parser = { path = "../sqlmicro-parser" }
sqlmicro-execution = { path = "../sqlmicro-execution" }
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
tabled = "0.10.0"
